@@ -1,6 +1,12 @@
 # Document  $Id$
 # Summary   File changelog for the chemical-mime-data project.
 
+2008-01-16 Daniel Leidert <daniel.leidert@wgdd.de>
+
+	* src/chemical-mime-database.xml.in: Fixed tabs formatting.
+	(chemical/x-mdl-*): Fixed URL to ctfile.pdf.
+	(chemical/x-pdb): Removed doubled pattern for COMPND.
+
 2007-10-16 Daniel Leidert <daniel.leidert@wgdd.de>
 
 	* xsl/cmd_gnome-keys.xsl (cm:icon, fdo:comment): Fixed output format.
